--- a/index.html
+++ b/index.html
@@ -104,8 +104,43 @@
               </div>
           </div>
       </div>
-        <!-- ==============Container end=========== -->
+
+       <!-- ==============Container end=========== -->
     </div>
+      <!-- ===========Footer Part============== -->
+
+    <div class="container-fluid text-white pt-2" id="footer">
+      <div class="row d-flex pt-3 text-center px-4">
+       <div class="col-lg-3 text-center">
+         <h4 class="text-primary">Select Your Dream Five Players</h4>
+         <p>It is a fantasy sports platform that allows users to play fantasy cricket, hockey, football, kabaddi, handball, basketball, volleyball, rugby, futsal, American football and baseball. </p>
+       </div>
+
+       <div class="col-lg-6 py-4">
+        <h5 class="py-5 text-primary">Copyright @ 2022 All Rights Reserved</h5>
+       </div>
+
+       <div class="col-lg-3">
+        <h4 class="text-primary">Contact Us</h4>
+        <p>Office 32, Nikunja-2,<br>
+          Khilkhet,<br>
+          Dhaka-1229<br>
+          Privacy Policy | Terms of use
+
+        
+        </p>
+      </div>
+        <!-- ===========Social Media Link========= -->
+      <div class="col-lg-12 py-3 d-flex justify-content-center align-items-center mb-5">
+        <a href="https://www.google.com/" target="_blank"><i class="fa-brands fa-google ms-5 fs-4 link"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter ms-5 fs-4 link"></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube ms-5 fs-4 link"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin ms-5 fs-4 link"></i></a>
+      </div>
+      </div>
+
+    </div>
+       
 
 
 
