delete demo html file

--- a/blog.html
+++ b/blog.html
@@ -119,7 +119,37 @@
         </div>
       </section>
 
-
+      <div class="container-fluid text-dark pt-2" id="footer">
+        <div class="row d-flex pt-3 text-center px-4">
+         <div class="col-lg-3 text-center">
+           <h4 class="text-primary">News Today</h4>
+           <p>This News portal is an access point to news; This is generally thought of as a Internet connection to a news source but the definition of a “Portal” would include a newspaper, magazine or any other access to news. A web portal is any access point to the Internet.</p>
+         </div>
+  
+         <div class="col-lg-6 py-4">
+          <h5 class="py-5 text-primary">Copyright @ 2022 All Rights Reserved</h5>
+         </div>
+  
+         <div class="col-lg-3">
+          <h4 class="text-primary">Contact Us</h4>
+          <p>Office 32, Nikunja-2,<br>
+            Khilkhet,<br>
+            Dhaka-1229<br>
+            Privacy Policy | Terms of use
+  
+          
+          </p>
+        </div>
+          <!-- ===========Social Media Link========= -->
+        <div class="col-lg-12 py-3 d-flex justify-content-center align-items-center mb-5">
+          <a href="https://www.google.com/" target="_blank"><i class="fa-brands fa-google ms-5 fs-4 link"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter ms-5 fs-4 link"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube ms-5 fs-4 link"></i></a>
+          <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin ms-5 fs-4 link"></i></a>
+        </div>
+        </div>
+  
+      </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
