--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
     </div>
       <!-- ===========Footer Part============== -->
 
-    <div class="container-fluid text-white pt-2" id="footer">
+    <div class="container-fluid text-dark pt-2" id="footer">
       <div class="row d-flex pt-3 text-center px-4">
        <div class="col-lg-3 text-center">
-         <h4 class="text-primary">Select Your Dream Five Players</h4>
-         <p>It is a fantasy sports platform that allows users to play fantasy cricket, hockey, football, kabaddi, handball, basketball, volleyball, rugby, futsal, American football and baseball. </p>
+         <h4 class="text-primary">News Today</h4>
+         <p>This News portal is an access point to news; This is generally thought of as a Internet connection to a news source but the definition of a “Portal” would include a newspaper, magazine or any other access to news. A web portal is any access point to the Internet.</p>
        </div>
 
        <div class="col-lg-6 py-4">
