added footer in blog page

--- a/blog.html
+++ b/blog.html
@@ -118,11 +118,11 @@
           </div>
         </div>
       </section>
-
+    </div>
       <div class="container-fluid text-dark pt-2" id="footer">
         <div class="row d-flex pt-3 text-center px-4">
          <div class="col-lg-3 text-center">
-           <h4 class="text-primary">News Today</h4>
+           <h4 class="text-primary">📰 News Today</h4>
            <p>This News portal is an access point to news; This is generally thought of as a Internet connection to a news source but the definition of a “Portal” would include a newspaper, magazine or any other access to news. A web portal is any access point to the Internet.</p>
          </div>
   
