--- a/index.html
+++ b/index.html
@@ -63,7 +63,37 @@
           <div class="container mt-3 mb-3 border border-light bg-light">
             <h5 id="news-count"></h5>
         </div>
-        
+        <!-- =============Sorting Section============== -->
+        <nav class="navbar navbar-expand-lg mb-5">
+          <div class="container">
+              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Sort by view :</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle text-muted" href="#" role="button"
+                              data-bs-toggle="dropdown" aria-expanded="false">
+                              Default
+                          </a>
+                          <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li>
+                                  <hr class="dropdown-divider">
+                              </li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                      </li>
+                  </ul>
+                  <div class="d-flex" role="search">
+                      <button class="btn btn-outline-primary me-4 active" type="button">Todays Pick</button>
+                      <button class="btn btn-outline-primary" type="button">Trending</button>
+                  </div>
+              </div>
+          </div>
+      </nav>
 
         <!-- =============All news Section=========== -->
         
